// Auxiliary Protocol Buffer for the Particpatory Networking API
// http://pane.cs.brown.edu
//
// Author: Andrew Ferguson (adf@cs.brown.edu)
//

package pane;
option java_package = "edu.brown.cs.pane";

////////////////////////////////////////////////////////////////////////////////
// 
// Extensible wrappers for describing IP addresses, transport protocols, and
// transport ports
//
////////////////////////////////////////////////////////////////////////////////

// TODO(adf): IP prefixes and binary representations
enum IPAddrType {
  ADDR_UNKNOWN = 0;
  ADDR_IPV4_STRING = 1;
  ADDR_IPV6_STRING = 2;
}

message IPAddress {
  optional IPAddrType type = 1;  // required
  optional string address = 2;
}

enum TransportProto {
  TP_UNKNOWN = 0;
  TP_TCP = 1;
  TP_UDP = 2;
}

// Leave extensible to support port ranges, port prefixes (already supported
// in Open vSwitch), etc.
message Port {
  optional uint32 number = 2;
}
